--- a/MERNReactJS/src/Components/video.css
+++ b/MERNReactJS/src/Components/video.css
@@ -1,11 +1,11 @@
 .header{
     font-family: sans-serif;
-    /* display: flex; */
+    
 
   }
   .wrapper{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
   }
   .images{
     width: 360px;
