--- a/MERNReactJS/src/Components/video.css
+++ b/MERNReactJS/src/Components/video.css
@@ -1,12 +1,13 @@
 .header{
     font-family: sans-serif;
-    
 
   }
   .wrapper{
     display: flex;
-    flex-direction: column;
+  flex-direction: column;
+  position: relative;
   }
+
   .images{
     width: 360px;
   }
@@ -19,6 +20,27 @@
   .channel{
     color: white;
   }
+  .close{
+    position: absolute;
+    width: 50px;
+    height: 40px;
+    font-size: larger;
+    border-radius: 10px;
+    border: none;
+  }
+.edit{
+  position: absolute;
+    width: 50px;
+    height: 40px;
+    font-size: larger;
+    border-radius: 10px;
+    border: none;
+}
+.buttonclass{
+  display: flex;
+  gap: 60px;
+}
+
 
 /* 
 
